--- a/_posts/2015-04-29-job-offer.md
+++ b/_posts/2015-04-29-job-offer.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Looking for a PHP developer"
+title:  "Job offer: PHP developer"
 date:   2015-04-29 9:00:00
 author: vincent
 lang: en
