Mise à jour offre d'emploi

--- a/_posts/2015-04-29-job-offer.md
+++ b/_posts/2015-04-29-job-offer.md
@@ -6,15 +6,18 @@ author: vincent
 lang: en
 ---
 
-Territoires is looking for a human being to join the development team of Caligram, a service that will equip organizations and communities from around the world with excellent event calendars. It will be built as open source software and aim to contribute to the commmon good through the free flow of event-related information.
+Territoires is looking for a human being to join the development team of Caligram, a service that will equip organizations and communities from around the world with excellent event calendars. It will be built as open source software and aim to contribute to the commmon good through the free flow of event-related information. The development of Caligram is well advanced.
 
-The project is a web application based on the Laravel framework. The candidate should have an excellent knowledge of PHP, Javascript, and be familiar with Laravel.
+The project is a web application based on the Laravel framework. The candidate should have an excellent knowledge of PHP, Javascript, and be familiar with Laravel, git and composer. Bonus points for having worked with a modern JS framework like AngularJS, Ember or React.
+
+We would be happy to hire an experienced developer, but are also open to motivated and talented developers in their early career.
 
 Our offices are in the Mile End, in a bright space shared with around 20&nbsp;friendly people.
 
 + Full-time: 4 or 5 days/weeks, depending on the candidate's preference;
 + 4 month contract, renewable with the possibility of becoming a full member of the Territoires cooperative;
 + Flexible schedule;
++ Salary: 30$/hour;
 + A wonderful working space with a breathtaking view on Montréal.
 
 Interested? Please contact us by May 11<sup>th</sup>, 2015.
