--- a/_posts/2015-04-29-job-offer.md
+++ b/_posts/2015-04-29-job-offer.md
@@ -12,7 +12,7 @@ The project is a web application based on the Laravel framework. The candidate s
 
 We would be happy to hire an experienced developer, but are also open to motivated and talented developers in their early career.
 
-Our offices are in the Mile End, in a bright space shared with around 20&nbsp;friendly people.
+Our offices are in the Mile-End, in a bright space shared with around 20&nbsp;friendly people. Work from home or elsewhere is possible.
 
 + Full-time: 4 or 5 days/weeks, depending on the candidate's preference;
 + 4 month contract, renewable with the possibility of becoming a full member of the Territoires cooperative;
